splash screen, icon, screen when no QRcode has been scanned implemented

--- a/app.json
+++ b/app.json
@@ -1,5 +1,14 @@
 {
   "expo": {
-    "sdkVersion": "26.0.0"
+    "sdkVersion": "26.0.0",
+    "name": "Authenticator",
+    "slug": "auth-nehrr",
+    "privacy": "public",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/fenris.png",
+      "backgroundColor": "#FFFFFF",
+      "resizeMode": "contain"
+    }
   }
 }
