--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
+    "jssha": "^2.3.1",
     "lodash": "^4.17.5",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
